// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli calls the correct handler with the proper arguments 1`] = `
[
  [
    {
      "amount": "1000000000",
      "destAddress": "0x0",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "srcAsset": undefined,
    },
    {
      "network": "localnet",
      "signer": undefined,
      "srcTokenContractAddress": "0x0",
      "vaultContractAddress": "0x0",
    },
  ],
]
`;

exports[`cli calls the correct handler with the proper arguments 2`] = `
[
  [
    {
      "amount": "1000000000",
      "destAddress": "0x0",
      "destAsset": "USDC",
      "destChain": "Ethereum",
      "srcAsset": undefined,
    },
    {
      "network": "sisyphos",
      "signer": undefined,
    },
  ],
]
`;
